fix: upgrade data_erasing

--- a/data_erasing.ipynb
+++ b/data_erasing.ipynb
@@ -44,20 +44,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Berhasil menghapus label.\n",
+      "[INFO] Berhasil menghapus gambar.\n",
+      "\n",
+      "\n",
+      "[INFO] Berhasil menghapus label.\n",
+      "[INFO] Berhasil menghapus gambar.\n",
+      "\n",
+      "\n",
+      "[INFO] Berhasil menghapus label.\n",
+      "[INFO] Berhasil menghapus gambar.\n",
+      "\n",
+      "\n",
+      "[INFO] Berhasil menghapus label.\n",
+      "[INFO] Berhasil menghapus gambar.\n",
+      "\n",
+      "\n",
+      "[INFO] Berhasil menghapus label.\n",
+      "[INFO] Berhasil menghapus gambar.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
     "\n",
     "NAMA_FILE = [\n",
-    "  \"_MG_3017_21_jpg.rf.693a1f67cb3fbabe4d48e20875362672\",\n",
-    "  \"_MG_8080_04_jpg.rf.4265ca84eca97b89ba6c37dd19060b7c\",\n",
-    "  \"_MG_8080_07_jpg.rf.30145fcc76b668fbe2e151554f5f8398\",\n",
-    "  \"_MG_8903_02_jpg.rf.862d9c27882eaae09b1e67d27d811fe0\",\n",
-    "  \"_MG_8903_16_jpg.rf.0e3b7c5d07af07339b83a91c464ab865\",\n",
-    "  \"_MG_9000_04_jpg.rf.b971f6b638d984da57c1d846c634868f\"\n",
+    "  \"citra41_jpg.rf.55cc02efbac37fd23ddd79e904c80f71\",\n",
+    "  \"citra37_jpg.rf.0fcd0ba37f3fd33857da5ec144029887\",\n",
+    "  \"slice_61_3_jpeg_jpg.rf.e4ae3ae08cbd902490ac863ffb56176a\",\n",
+    "  \"slice_61_3_jpeg.rf.753ba7ad425229242c4042779e6b520b\",\n",
+    "  \"slice_48_9_jpeg.rf.082cffee3f39be846182919311d8d4a7\",\n",
     "]\n",
     "\n",
     "SOURCE_FOLDER_LABEL = \"C:/Users/USER/Desktop/deteksi-ragam-buah-yolov11/__DATASET FOR TRAIN 3/apel/train/labels\"\n",
@@ -71,20 +97,26 @@
     "  file_label_path = os.path.join(SOURCE_FOLDER_LABEL, FILENAME_LABEL)\n",
     "  file_images_path = os.path.join(SOURCE_FOLDER_IMAGES, FILENAME_IMAGES)\n",
     "  \n",
-    "  if(os.path.exists(file_label_path) or os.path.exists(file_images_path)):\n",
+    "  if(os.path.exists(file_label_path) and os.path.exists(file_images_path)):\n",
     "    os.remove(file_label_path)\n",
     "    print(\"[INFO] Berhasil menghapus label.\")\n",
     "    os.remove(file_images_path)\n",
     "    print(\"[INFO] Berhasil menghapus gambar.\")\n",
+    "    print(\"\\n\")\n",
     "  else:\n",
     "    if(not os.path.exists(file_label_path)):\n",
     "      print(\"[ERROR] Label tidak ada\")\n",
-    "      break\n",
     "    if(not os.path.exists(file_images_path)):\n",
     "      print(\"[ERROR] Gambar tidak ada\")\n",
-    "      break\n",
-    "\n"
+    "    break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
