fix: upgrade data_erasing

--- a/data_erasing.ipynb
+++ b/data_erasing.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -79,11 +79,11 @@
     "import shutil\n",
     "\n",
     "NAMA_FILE = [\n",
-    "  \"citra41_jpg.rf.55cc02efbac37fd23ddd79e904c80f71\",\n",
-    "  \"citra37_jpg.rf.0fcd0ba37f3fd33857da5ec144029887\",\n",
-    "  \"slice_61_3_jpeg_jpg.rf.e4ae3ae08cbd902490ac863ffb56176a\",\n",
-    "  \"slice_61_3_jpeg.rf.753ba7ad425229242c4042779e6b520b\",\n",
-    "  \"slice_48_9_jpeg.rf.082cffee3f39be846182919311d8d4a7\",\n",
+    "  \"citra4_jpg.rf.46073fa1c93884bfe7563159a1980c04\",\n",
+    "  \"citra5_jpg.rf.54af93d72b5e4e2178944be5aec07d6a\",\n",
+    "  \"citra95_jpg.rf.cad27931aeafce202008bd2a020b0e4f\",\n",
+    "  \"citra97_jpg.rf.4d087e48254be5fc2b37bfa6c2baeae5\",\n",
+    "  \"citra66_jpg.rf.77a198c97536f82927deed50fbd95a8b\",\n",
     "]\n",
     "\n",
     "SOURCE_FOLDER_LABEL = \"C:/Users/USER/Desktop/deteksi-ragam-buah-yolov11/__DATASET FOR TRAIN 3/apel/train/labels\"\n",
@@ -99,15 +99,15 @@
     "  \n",
     "  if(os.path.exists(file_label_path) and os.path.exists(file_images_path)):\n",
     "    os.remove(file_label_path)\n",
-    "    print(\"[INFO] Berhasil menghapus label.\")\n",
+    "    print(\"[✅] Berhasil menghapus label.\")\n",
     "    os.remove(file_images_path)\n",
-    "    print(\"[INFO] Berhasil menghapus gambar.\")\n",
+    "    print(\"[✅] Berhasil menghapus gambar.\")\n",
     "    print(\"\\n\")\n",
     "  else:\n",
     "    if(not os.path.exists(file_label_path)):\n",
-    "      print(\"[ERROR] Label tidak ada\")\n",
+    "      print(\"[❌] Label tidak ada\")\n",
     "    if(not os.path.exists(file_images_path)):\n",
-    "      print(\"[ERROR] Gambar tidak ada\")\n",
+    "      print(\"[❌] Gambar tidak ada\")\n",
     "    break\n"
    ]
   },
